<resources>
    <string name="app_name">SmartBiz</string>
    <string name="Smart">SMART</string>
    <string name="Biz">BIZ</string>
    <string name="skip">Skip</string>
    <string name="iconapp">iconApp</string>
    <string name="title">Create Income</string>
    <string name="desc_income">Feel free to input your sales revenue for your products here, and you will also receive notifications if your product stock is less than 10. </string>
    <string name="desc_outcome">You can add your product purchases for restocking and also input the purchase prices for later profit calculations. </string>
    <string name="desc_items">Here contains information about the products available in your sales, as well as features to change the name and price of the products, and a delete feature. </string>
    <string name="desc_insight"> Learn more about when your products will run out and how your sales predictions look.</string>
    <string name="next">Next</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="tv_account">Don’t have an account?</string>
    <string name="create_account">Register</string>
    <string name="graph">Graph</string>
    <string name="Table">Table</string>

    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="welcome">Hallo Putri, Welcome!</string>
    <string name="input_data">Silahkan input data usaha kamu ya!</string>
    <string name="type">Apa jenis usaha kamu?</string>
    <string name="input_product">Barang apakah yang ingin anda jual?</string>
    <string name="input_total">Berapa total barang tersebut?</string>
    <string name="input_price">Berapa harga barang tersebut?</string>
    <string name="hallo_saya_hilda">Hallo, saya Hilda</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="stats">Stats</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">bottom_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_income">Create Income</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="create_outcome">Create Outcome</string>
    <string name="your_items">Your Items</string>
    <string name="insight">Insight</string>
    <string name="insight_business">Insight Business</string>
    <string name="hallo_user">User!</string>
    <string name="notification">Notification</string>
    <string name="help">help</string>
    <string name="delete">delete</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="icon_profile">icon profile</string>
    <string name="line">line</string>
    <string name="enter_the_date">Enter the date</string>
    <string name="date">Date</string>
    <string name="what_kind_of_item">What kind of item?</string>
    <string name="how_many">How many?</string>
    <string name="how_much_for_the_price">How much for the price?</string>
    <string name="total">Total</string>
    <string name="rp_30_000">Rp. 30.000</string>
    <string name="save">Save</string>
    <string name="hoodie">Hoodie</string>
    <string name="rp_40_000">Rp 40.000</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="_25_09_2023">25/09/2023</string>
    <string name="terigu">Terigu</string>
    <string name="_50_000">+ 50.000</string>
    <string name="item">Item  :</string>
    <string name="price">Price :</string>
    <string name="available">Available :</string>
    <string name="_50">50</string>
    <string name="edit">edit</string>
    <string name="statistic">Statistic</string>
    <string name="_300_000">300,000</string>
    <string name="expense">Expense</string>
    <string name="decrement">-</string>
    <string name="what_kind_of_item_you_want_to_sell">What kind of item you want to sell?</string>
    <string name="add_item">Add Item</string>
    <string name="hilda_gmail_com">Hilda@gmail.com</string>
    <string name="theme">Theme</string>
    <string name="your_email">your email</string>
    <string name="_1">1</string>
    <string name="personal_information">Personal Information</string>
    <string name="utilities">Utilities</string>
    <string name="hilda77">hilda77</string>
    <string name="password">*****</string>
    <string name="language">Language</string>
    <string name="sweatshirt">Sweatshirt</string>
    <string name="sweatpants">Sweatpants</string>
    <string name="jacket">Jacket</string>
    <string name="required_field">require field</string>
    <string name="missing_field">please enter field</string>
    <string name="apakah_yakin_ingin_meninggalkan_halaman">Apakah yakin ingin meninggalkan halaman?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="joshua">Joshua</string>
    <string name="qty">Qty</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="selected_item">Selected Item</string>
    <string name="halo">Halo,</string>
    <string name="sort_by_income">Filter by Income</string>
    <string name="sort_by_expense">Filter by Expense</string>
    <string name="harga">Harga</string>
    <string name="tanggal">Tanggal</string>
    <string name="send_email">Send Email</string>
    <string name="save_password">Save Password</string>
    <string name="recovery_password">Recovery password</string>
    <string name="your_token">your token</string>
    <string name="new_password">new password</string>
    <string name="rp2_000_000">Rp2.000.000</string>
    <string name="rp">Rp</string>
</resources>