<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_merch"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/item_merch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="20dp">


        <TextView
            android:id="@+id/txt_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_medium"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/item"/>


        <TextView
            android:id="@+id/txt_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_medium"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/txt_item"
            app:layout_constraintTop_toTopOf="@+id/txt_item"
            android:text="@string/hoodie"/>


        <TextView
            android:id="@+id/txt_label_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_medium"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/txt_item"
            app:layout_constraintTop_toBottomOf="@+id/txt_item"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_medium"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/txt_label_price"
            app:layout_constraintTop_toTopOf="@+id/txt_label_price"
            android:text="@string/rp_30_000"/>

        <TextView
            android:id="@+id/txt_label_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_medium"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/txt_label_price"
            app:layout_constraintTop_toBottomOf="@+id/txt_label_price"
            android:text="@string/available"/>

        <TextView
            android:id="@+id/txt_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_medium"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/txt_label_quantity"
            app:layout_constraintTop_toTopOf="@+id/txt_label_quantity"
            android:text="@string/_50"/>






    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_edt"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_merch"
        app:layout_constraintTop_toTopOf="@id/item_merch"
        android:contentDescription="@string/edit"
        app:layout_goneMarginTop="10dp"
        android:layout_marginTop="30dp"
        app:tint="@color/blue" />







</androidx.constraintlayout.widget.ConstraintLayout>